--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Jekyll Themes
-url: http://matt.harzewski.com
+url: https://gstroop147050.github.io/gstroop147050/
 description: Insert tagline here
 
 permalink: /themes/:title/
